<resources>
    <string name="app_name">CursoAndroid</string>
    <string name="forgot_password">¿Olvido su contrseña?</string>
    <string name="register">Registro</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="login_password">Contraseña</string>
    <string name="login_user">Usuario</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>