<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_vGuide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_vGuide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_hGuide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_forgot_password"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@id/login_hGuide90"
        app:layout_constraintEnd_toStartOf="@id/login_vGuide90"
        app:layout_constraintStart_toEndOf="@id/login_vGuide10"
        app:strokeWidth="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_register"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/login_btn_forgot_password"
        app:layout_constraintEnd_toStartOf="@id/login_vGuide90"
        app:layout_constraintStart_toEndOf="@id/login_vGuide10"
        app:strokeWidth="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/log_in"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/login_btn_register"
        app:layout_constraintEnd_toStartOf="@id/login_vGuide90"
        app:layout_constraintStart_toEndOf="@id/login_vGuide10"
        app:strokeWidth="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintEnd_toStartOf="@id/login_vGuide90"
        app:layout_constraintStart_toEndOf="@id/login_vGuide10"
        android:layout_marginBottom="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tie_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_user"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/login_til_password"
        app:layout_constraintEnd_toStartOf="@id/login_vGuide90"
        app:layout_constraintStart_toEndOf="@id/login_vGuide10"
        android:layout_marginBottom="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tie_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>